--- a/css/CSS.css
+++ b/css/CSS.css
@@ -72,7 +72,7 @@ a.btn:hover {
 }
 
 .contentXX {
-  background:url("../img/COD3.jpg");
+  background:url("../img/COD3.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
